syntax = "proto3";

package wtf.emulator.utp;

option java_package = "wtf.emulator.utp";
option java_multiple_files = true;

// These messages are derived from com.google.testing.platform.proto

message TestSuiteResult {
  TestSuiteMetaData test_suite_meta_data = 1;
  TestStatus test_status = 2;
  repeated TestResult test_result = 3;
  PlatformError platform_error = 4;
  repeated Artifact output_artifact = 5;
  repeated Issue issue = 6;
}

message TestSuiteMetaData {
  string test_suite_name = 1;
  int32 scheduled_test_case_count = 2;
  DeviceId device = 3;
}

enum TestStatus {
  TEST_STATUS_UNSPECIFIED = 0;
  STARTED = 1;
  FAILED = 2;
  PASSED = 3;
  IGNORED = 4;
  ERROR = 5;
  ABORTED = 6;
  CANCELLED = 7;
  SKIPPED = 8;
  IN_PROGRESS = 9;
  TEST_STATUS_UNRECOGNIZED = -1;
}

message TestResult {
  TestCase test_case = 1;
  TestStatus test_status = 2;
  repeated TestDetailsEntry details = 5;
  Error error = 3;
  repeated Artifact output_artifact = 4;
}

message PlatformError {
  repeated Error errors = 2;
}

message Artifact {
  Label label = 1;
  Path source_path = 2;
  Path destination_path = 3;
  ArtifactType type = 4;
  string checksum = 5;
  string mime_type = 6;
}

enum ArtifactType {
  ARTIFACT_TYPE_UNSPECIFIED = 0;
  EXECUTABLE = 1;
  ANDROID_APK = 2;
  TEST_DATA = 3;
  ANDROID_APP_BUNDLE = 4;
  ANDROID_APK_SET = 5;
  REMOTE_DATA = 6;
  ARTIFACT_TYPE_UNRECOGNIZED = -1;
}

message Issue {
  Label namespace = 1;
  int32 severity = 2;
  int32 code = 3;
  string name = 4;
  string message = 5;
}

message DeviceId {
  string id = 1;
  string friendly_name = 2;
}

message TestCase {
  string test_class = 1;
  string test_package = 2;
  string test_method = 3;
  repeated Annotation test_class_annotation = 4;
  repeated Annotation test_method_annotation = 5;
  Timestamp start_time = 6;
  Timestamp end_time = 7;
  DeviceId device = 8;
}

message Annotation {
  string name = 1;
}

message TestDetailsEntry {
  string key = 1;
  string value = 2;
}

message Label {
  string label = 1;
  string namespace = 2;
}

message Path {
  string path = 1;
}

message Error {
  string error_message = 1;
  string error_type = 2;
  string stack_trace = 3;
}

message Timestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}
